--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ rich = "^13.0.0"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 flake8 = "^6.1.0"
+pre-commit = "^3.5.0"
 
 [tool.poetry.scripts]
 url-prober = "url_prober.cli:main"
 
 [build-system]
 requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api" 
+build-backend = "poetry.core.masonry.api"
