--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,8 +30,11 @@ repos:
     rev: 5.12.0
     hooks:
     -   id: isort
+        args: ["--profile", "black", "--line-length=79"]
 
 -   repo: https://github.com/psf/black
     rev: 23.10.1
     hooks:
     -   id: black
+        language_version: python3
+        args: [--line-length=79]
