--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "url-prober"
-version = "0.1.0"
-description = "A tool for probing URLs and checking their availability"
+version = "0.1.0rc2"
+description = "A tool to request a specified `url` and return the response."
 authors = ["Andrew Vella"]
 readme = "README.md"
 packages = [{include = "url_prober", from = "src"}]
