--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -1,15 +1,17 @@
-name: Publish to PyPI
+name: Publish Python Poetry Package to TestPyPI
 
 on:
-    release:
-      types: [published]
+  push:
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
+      - '[0-9]+.[0-9]+.[0-9]+rc[0-9]+'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     environment:
-      name: pypi
-      url: https://pypi.org/project/${{ github.event.repository.name }}
+      name: testpypi
+      url: https://test.pypi.org/project/${{ github.event.repository.name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -44,6 +46,6 @@ jobs:
         run: |
           poetry build
 
-      - name: Publish to PyPI
+      - name: Publish to TestPyPI
         run: |
-          poetry publish -r pypi --username '__token__' --password '${{ secrets.PYPI_API_TOKEN }}'
+          poetry publish -r testpypi --username '__token__' --password '${{ secrets.TEST_PYPI_API_TOKEN }}'
