--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Verify version matches tag
         run: |
           VERSION=$(poetry version -s)
-          TAG=${GITHUB_REF#refs/tags/v}
+          TAG=${GITHUB_REF#refs/tags/}
           if [ "$VERSION" != "$TAG" ]; then
             echo "Error: Version in pyproject.toml ($VERSION) does not match tag ($TAG)"
             exit 1
