--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -7,45 +7,37 @@ on:
       - '[0-9]+.[0-9]+.[0-9]+rc[0-9]+'
 
 jobs:
-  publish:
+  deploy:
     runs-on: ubuntu-latest
     environment:
       name: testpypi
       url: https://test.pypi.org/project/${{ github.event.repository.name }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
-      - name: Install Poetry
-        run: |
-          curl -sSL https://install.python-poetry.org | python -
+    - name: Install poetry
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
 
-      - name: Verify version matches tag
-        run: |
-          VERSION=$(poetry version -s)
-          TAG=${GITHUB_REF#refs/tags/}
-          if [ "$VERSION" != "$TAG" ]; then
-            echo "Error: Version in pyproject.toml ($VERSION) does not match tag ($TAG)"
-            exit 1
-          fi
+    - name: Verify version matches tag
+      run: |
+        VERSION=$(poetry version -s)
+        TAG=${GITHUB_REF#refs/tags/}
+        if [ "$VERSION" != "$TAG" ]; then
+          echo "Error: Version in pyproject.toml ($VERSION) does not match tag ($TAG)"
+          exit 1
+        fi
 
-      - name: Configure Poetry
-        run: |
-          poetry config virtualenvs.create false
-
-      - name: Install dependencies
-        run: |
-          poetry install
-
-      - name: Build package
-        run: |
-          poetry build
-
-      - name: Publish to TestPyPI
-        run: |
-          poetry publish -r testpypi --username '__token__' --password '${{ secrets.TEST_PYPI_API_TOKEN }}'
+    - name: Build and publish to TestPyPI
+      env:
+        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      run: |
+        poetry build
+        poetry publish
