--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -10,6 +10,8 @@ jobs:
     environment:
       name: pypi
       url: https://pypi.org/project/${{ github.event.repository.name }}
+    permissions:
+      id-token: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
