--- a/.github/workflows/publish-testpypi.yml
+++ b/.github/workflows/publish-testpypi.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish:
-    name: Publish to Test-PyPI
+    name: Publish to TestPyPI
     runs-on: ubuntu-latest
     environment: testpypi
     permissions:
@@ -33,8 +33,8 @@ jobs:
       - name: Build
         run: |
           poetry build
-      - name: Publish to Test-PyPI
-        if: github.event_name == 'release' && ( github.ref_name =~ '^refs/tags/[0-9]+\\.[0-9]+\\.[0-9]+$' || github.ref_name =~ '^refs/tags/[0-9]+\\.[0-9]+\\.[0-9]+-rc[0-9]+$' )
+      - name: Publish to TestPyPI
+        if: github.event_name == 'release'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
