--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "urlprober"
-version = "0.1.0-rc7"
+version = "0.1.0-rc8"
 description = "A tool to request a specified `url` and return the response."
 authors = ["Andrew Vella"]
 readme = "README.md"
@@ -21,7 +21,7 @@ flake8 = "^6.1.0"
 pre-commit = "^3.5.0"
 
 [tool.poetry.scripts]
-urlprober = "urlprober.cli:main"
+urlprober = "urlprober.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
