feat: initial release of urlprober, updated CHANGELOG

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "urlprober"
-version = "0.1.0-rc8"
+version = "0.1.0"
 description = "A tool to request a specified `url` and return the response."
 authors = ["Andrew Vella"]
 readme = "README.md"
