--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,3 +42,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://upload.pypi.org/legacy/
+          attestations: false
